fix: Content alignment (height)  on home page

--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -111,11 +111,8 @@
         font-size: 25px;
     }
     main {
-        height: 65%;
+        height: 60%;
     }
-}
-
-@media (max-width: 580px) {
     .copyright-text {
         display: none;
     }
